<resources>
    <string name="app_name">Weather</string>
    <string name="download">Download</string>
    <string name="quit">Quit</string>
    <!--<string name="settings">Settings</string>-->
    <string name="id">Id</string>
    <string name="stationName">Station Name</string>
    <string name="stationPosition">Station position</string>
    <string name="temperature">Temperature</string>
    <string name="timestamp">Timestamp</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="showSaved">Show data</string>
    <string name="changeDownloadTime">Download time</string>
    <string name="changeStation">Station</string>
    <string name="changeTime">Timestamp</string>
    <string name="sek120">120 sek</string>
    <string name="sek60">60 sek</string>
    <string name="sek10">10 sek</string>
    <string name="sek5">5 sek</string>
    <string name="nordpolen">Nordpolen</string>
    <string name="syden">Syden</string>
    <string name="stranda">Stranda</string>
    <string name="iskaldtoppen">Iskaldtoppen</string>
    <string name="nullgraderslia">Nullgraderslia</string>

    <!--<string name="interval">Download interval</string>-->
    <!--<string name="max_seconds">Max running time</string>-->
    <!--<string name="pref_interval">Interval Preference</string>-->
    <!--<string name="pref_int_summ">The interval which the program will wait before downloading a new datapoint.\nCurrently selected: %s</string>-->
    <!--<string name="max_seconds_summ">The amount of seconds the download will maximum run for.\nCurrently selected: %s</string>-->
    <!--<string name="station_name">Station name</string>-->
    <!--<string name="station_summ">Choose which station to gather weatherdata from.\nCurrently selected: %s</string>-->
    <!--<string name="deleteButton">deleteButton</string>-->
    <!--<string name="delete_database">Delete database</string>-->
    <!--<string name="delete_database_summ">Clicking this will clear all saved database data.</string>-->
    <!--<string name="action_settings">Settings</string>-->
    <!--<string name="change_settings">Change preferences</string>-->
    <!--<string name="change_settings_summ">Change how the application downloads weather data.</string>-->
    <!--<string name="options_disabled">Options menu disabled while download is running.</string>-->
    <!--<string name="number_of_datapoints">Datapoints</string>-->
    <!--<string name="number_of_datapoints_summ">Select how many datapoints the graph will maximum hold</string>-->
    <!--<string name="start_time">Start time</string>-->
    <!--<string name="stop_time">Stop time</string>-->
    <!--<string name="datapoints_hint">Enter maximum number of datapoints</string>-->
    <!--<string name="view_graph_while_downloading">You must finish downloading before accessing the view window.</string>-->
    <string name="show">Show graph</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="interval">Interval</string>
    <string name="sek1">1 sek</string>
    <string name="delete">Delete all data</string>
</resources>
